# openNight

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle  gradle.properties
.claude/: settings.local.json
.github/workflows/: build-loader.yml
native/: CMakeLists.txt  vcpkg.json
native/dll/: CMakeLists.txt
native/dll/res/: opennight.rc  resource.h
native/dll/src/: class_loader.cpp  diagnostics.cpp  jar_extract.cpp  jvm_attach.cpp  main.cpp  openlizz.h  opennight.h
native/loader/: CMakeLists.txt
native/loader/res/: loader.rc
native/loader/src/: InjectionOverlay.h  MainWindow.cpp  SplashScreen.cpp  SplashScreen.h  TitleBar.cpp  injector.cpp  loader.h  main.cpp
paste/: README.md
src/main/java/asm/patchify/loader/: PatchAgent.java  PatchTransformer.java
src/main/java/client/nilore/: ClientBase.java  NiloreClient.java
src/main/java/client/nilore/asm/: Bootstrap.java  ILocals.java  Invocation.java  InvocationImpl.java  Locals.java  MethodWrapper.java
src/main/java/client/nilore/command/: Command.java
src/main/java/client/nilore/config/: Config.java  ModulesConfig.java  ValuesConfig.java
src/main/java/client/nilore/dll/: ClientInit.java  ModuleInit.java
src/main/java/client/nilore/event/: AbstractCancellable.java  Cancellable.java  Event.java  EventBus.java  EventMarker.java  EventPriority.java  EventTarget.java  Prioritized.java
src/main/java/client/nilore/gui/: IntroAnimation.java  (+5 more)
src/main/java/client/opennight/: ClientBase.java  NightClient.java
src/main/java/shit/nilore/: NiloreClient.java
src/main/resources/webui/: index.html
(+794 files in other folders)
